--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                           <p class="lead">This is a demo for our tutorial dedicated to crafting working Bootstrap contact form with PHP and AJAX background.</p>
 
                           <!-- We're going to place the form here in the next step -->
-                          <form id="contact-form" method="post" action="contact.php" role="form">
+                          <form id="contact-form" method="post" action="https://formspree.io/ahmed.y.alnaim@gmail.com" role="form">
 
                             <div class="messages"></div>
 
@@ -109,7 +109,7 @@
                                             <div class="input-group">
                                               <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span>
                                               </span>
-                                              <input type="text" class="form-control" id="form_name" placeholder="Enter Your Name" required="required" />
+                                              <input type="text" class="form-control" id="form_name" name="FName" placeholder="Enter Your Name" required="required" />
                                             </div>
                                             <!-- <span class="glyphicon glyphicon-user"></span> -->
                                             <!-- <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required."> -->
@@ -127,7 +127,7 @@
                                             <div class="input-group">
                                               <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
                                               </span>
-                                              <input type="email" class="form-control" id="form_email" placeholder="Enter Your Email" required="required" />
+                                              <input type="email" class="form-control" id="form_email" name="email" placeholder="Enter Your Email" required="required" />
                                             </div>
                                             <!-- <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required."> -->
                                             <div class="help-block with-errors"></div>
